--- a/control_structures_exercises.ipynb
+++ b/control_structures_exercises.ipynb
@@ -359,6 +359,192 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "22\n",
+      "333\n",
+      "4444\n",
+      "55555\n",
+      "666666\n",
+      "7777777\n",
+      "88888888\n",
+      "999999999\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create a for loop that uses print to create the output shown below.\n",
+    "# 1\n",
+    "# 22\n",
+    "# 333\n",
+    "# ...\n",
+    "# 999999999\n",
+    "for i in range(1,10):\n",
+    "    print(str(i)*i)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Break and continue"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please input an odd number between 1 and 50 (inclusive): 50\n",
+      "You have failed to enter an odd number. Please try again. \n",
+      "Please input an odd number between 1 and 50 (inclusive): 1\n",
+      "The missing number will be: 1\n",
+      "3\n",
+      "5\n",
+      "7\n",
+      "9\n",
+      "11\n",
+      "13\n",
+      "15\n",
+      "17\n",
+      "19\n",
+      "21\n",
+      "23\n",
+      "25\n",
+      "27\n",
+      "29\n",
+      "31\n",
+      "33\n",
+      "35\n",
+      "37\n",
+      "39\n",
+      "41\n",
+      "43\n",
+      "45\n",
+      "47\n",
+      "49\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Prompt the user for an odd number between 1 and 50. \n",
+    "# Use a loop and a break statement to continue prompting the user if they enter invalid input. \n",
+    "# (Hint: use the isdigit method on strings to determine this). \n",
+    "# Use a loop and the continue statement to output all the odd numbers between 1 and 50, except for the number the user entered.\n",
+    "while True:\n",
+    "\n",
+    "    start_odd = input(\"Please input an odd number between 1 and 50 (inclusive): \")\n",
+    "    \n",
+    "    if not start_odd.isdigit():\n",
+    "        print(\"Please input a numeric value. \")\n",
+    "        continue\n",
+    "\n",
+    "    if int(start_odd) < 1 or int(start_odd) > 50:\n",
+    "        print(\"You have entered a number outside of the specified range. Please try again. \")\n",
+    "        continue\n",
+    "        \n",
+    "    if int(start_odd) % 2 != 1:\n",
+    "        print(\"You have failed to enter an odd number. Please try again. \")\n",
+    "        continue\n",
+    "        \n",
+    "    else:\n",
+    "        break\n",
+    "        \n",
+    "print(f\"The missing number will be: {start_odd}\")\n",
+    "\n",
+    "for num in range(1, 51):\n",
+    "    if num == int(start_odd):\n",
+    "        continue\n",
+    "    if num % 2 == 1:\n",
+    "        print(num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please input an odd number between 1 and 50: beans\n",
+      "Sorry I didn't understand that. Please no strings or decimals. Try again. \n",
+      "Please input an odd number between 1 and 50: 10.4\n",
+      "Sorry I didn't understand that. Please no strings or decimals. Try again. \n",
+      "Please input an odd number between 1 and 50: -10\n",
+      "You have entered a number outside of the specified range. Please try again. \n",
+      "Please input an odd number between 1 and 50: 1\n",
+      "The missing number will be: 1\n",
+      "3\n",
+      "5\n",
+      "7\n",
+      "9\n",
+      "11\n",
+      "13\n",
+      "15\n",
+      "17\n",
+      "19\n",
+      "21\n",
+      "23\n",
+      "25\n",
+      "27\n",
+      "29\n",
+      "31\n",
+      "33\n",
+      "35\n",
+      "37\n",
+      "39\n",
+      "41\n",
+      "43\n",
+      "45\n",
+      "47\n",
+      "49\n"
+     ]
+    }
+   ],
+   "source": [
+    "# This is an alternative solution that uses try and except\n",
+    "while True:\n",
+    "    \n",
+    "    try:\n",
+    "        start_odd = int(input(\"Please input an odd number between 1 and 50 (inclusive): \"))\n",
+    "    except ValueError:\n",
+    "        print(\"Sorry I didn't understand that. Please no strings or decimals. Try again. \")\n",
+    "        continue\n",
+    "\n",
+    "    if int(start_odd) < 1 or int(start_odd) > 50:\n",
+    "        print(\"You have entered a number outside of the specified range. Please try again. \")\n",
+    "        continue\n",
+    "        \n",
+    "    if int(start_odd) % 2 != 1:\n",
+    "        print(\"You have failed to enter an odd number. Please try again. \")\n",
+    "        continue \n",
+    "        \n",
+    "    else:\n",
+    "        break\n",
+    "        \n",
+    "print(f\"The missing number will be: {start_odd}\")\n",
+    "\n",
+    "for num in range(1, 51):\n",
+    "    if num == int(start_odd):\n",
+    "        continue\n",
+    "    if num % 2 == 1:\n",
+    "        print(num)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -370,18 +556,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.6"
   }
  },
  "nbformat": 4,
