--- a/control_structures_exercises.ipynb
+++ b/control_structures_exercises.ipynb
@@ -398,41 +398,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Please input an odd number between 1 and 50 (inclusive): 50\n",
-      "You have failed to enter an odd number. Please try again. \n",
-      "Please input an odd number between 1 and 50 (inclusive): 1\n",
-      "The missing number will be: 1\n",
-      "3\n",
-      "5\n",
-      "7\n",
-      "9\n",
-      "11\n",
-      "13\n",
-      "15\n",
-      "17\n",
-      "19\n",
-      "21\n",
-      "23\n",
-      "25\n",
-      "27\n",
-      "29\n",
-      "31\n",
-      "33\n",
-      "35\n",
-      "37\n",
-      "39\n",
-      "41\n",
-      "43\n",
-      "45\n",
-      "47\n",
-      "49\n"
+      "Please input an odd number between 1 and 50 (inclusive): 3\n",
+      "\n",
+      "Number to skip is: 3\n",
+      "\n",
+      "Here is an odd number: 1\n",
+      "Yikes! Skipping number: 3\n",
+      "Here is an odd number: 5\n",
+      "Here is an odd number: 7\n",
+      "Here is an odd number: 9\n",
+      "Here is an odd number: 11\n",
+      "Here is an odd number: 13\n",
+      "Here is an odd number: 15\n",
+      "Here is an odd number: 17\n",
+      "Here is an odd number: 19\n",
+      "Here is an odd number: 21\n",
+      "Here is an odd number: 23\n",
+      "Here is an odd number: 25\n",
+      "Here is an odd number: 27\n",
+      "Here is an odd number: 29\n",
+      "Here is an odd number: 31\n",
+      "Here is an odd number: 33\n",
+      "Here is an odd number: 35\n",
+      "Here is an odd number: 37\n",
+      "Here is an odd number: 39\n",
+      "Here is an odd number: 41\n",
+      "Here is an odd number: 43\n",
+      "Here is an odd number: 45\n",
+      "Here is an odd number: 47\n",
+      "Here is an odd number: 49\n"
      ]
     }
    ],
@@ -446,70 +447,65 @@
     "    start_odd = input(\"Please input an odd number between 1 and 50 (inclusive): \")\n",
     "    \n",
     "    if not start_odd.isdigit():\n",
-    "        print(\"Please input a numeric value. \")\n",
+    "        print(\"\\nPlease input a positive integer value without decimals. \")\n",
     "        continue\n",
     "\n",
     "    if int(start_odd) < 1 or int(start_odd) > 50:\n",
-    "        print(\"You have entered a number outside of the specified range. Please try again. \")\n",
+    "        print(\"\\nYou have entered a number outside of the specified range. Please try again. \")\n",
     "        continue\n",
     "        \n",
     "    if int(start_odd) % 2 != 1:\n",
-    "        print(\"You have failed to enter an odd number. Please try again. \")\n",
+    "        print(\"\\nYou have failed to enter an odd number. Please try again. \")\n",
     "        continue\n",
     "        \n",
     "    else:\n",
     "        break\n",
     "        \n",
-    "print(f\"The missing number will be: {start_odd}\")\n",
+    "print(f\"\\nNumber to skip is: {start_odd}\\n\")\n",
     "\n",
     "for num in range(1, 51):\n",
     "    if num == int(start_odd):\n",
+    "        print(f\"Yikes! Skipping number: {start_odd}\")\n",
     "        continue\n",
     "    if num % 2 == 1:\n",
-    "        print(num)"
+    "        print(f\"Here is an odd number: {num}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Please input an odd number between 1 and 50: beans\n",
-      "Sorry I didn't understand that. Please no strings or decimals. Try again. \n",
-      "Please input an odd number between 1 and 50: 10.4\n",
-      "Sorry I didn't understand that. Please no strings or decimals. Try again. \n",
-      "Please input an odd number between 1 and 50: -10\n",
-      "You have entered a number outside of the specified range. Please try again. \n",
-      "Please input an odd number between 1 and 50: 1\n",
-      "The missing number will be: 1\n",
-      "3\n",
-      "5\n",
-      "7\n",
-      "9\n",
-      "11\n",
-      "13\n",
-      "15\n",
-      "17\n",
-      "19\n",
-      "21\n",
-      "23\n",
-      "25\n",
-      "27\n",
-      "29\n",
-      "31\n",
-      "33\n",
-      "35\n",
-      "37\n",
-      "39\n",
-      "41\n",
-      "43\n",
-      "45\n",
-      "47\n",
-      "49\n"
+      "Number to skip is: 5\n",
+      "Here is an odd number: 1\n",
+      "Here is an odd number: 3\n",
+      "Yikes! Skipping number: 5\n",
+      "Here is an odd number: 7\n",
+      "Here is an odd number: 9\n",
+      "Here is an odd number: 11\n",
+      "Here is an odd number: 13\n",
+      "Here is an odd number: 15\n",
+      "Here is an odd number: 17\n",
+      "Here is an odd number: 19\n",
+      "Here is an odd number: 21\n",
+      "Here is an odd number: 23\n",
+      "Here is an odd number: 25\n",
+      "Here is an odd number: 27\n",
+      "Here is an odd number: 29\n",
+      "Here is an odd number: 31\n",
+      "Here is an odd number: 33\n",
+      "Here is an odd number: 35\n",
+      "Here is an odd number: 37\n",
+      "Here is an odd number: 39\n",
+      "Here is an odd number: 41\n",
+      "Here is an odd number: 43\n",
+      "Here is an odd number: 45\n",
+      "Here is an odd number: 47\n",
+      "Here is an odd number: 49\n"
      ]
     }
    ],
@@ -520,27 +516,305 @@
     "    try:\n",
     "        start_odd = int(input(\"Please input an odd number between 1 and 50 (inclusive): \"))\n",
     "    except ValueError:\n",
-    "        print(\"Sorry I didn't understand that. Please no strings or decimals. Try again. \")\n",
+    "        print(\"\\nSorry I didn't understand that. Please no strings or decimals. Try again. \")\n",
     "        continue\n",
     "\n",
     "    if int(start_odd) < 1 or int(start_odd) > 50:\n",
-    "        print(\"You have entered a number outside of the specified range. Please try again. \")\n",
+    "        print(\"\\nYou have entered a number outside of the specified range. Please try again. \")\n",
     "        continue\n",
     "        \n",
     "    if int(start_odd) % 2 != 1:\n",
-    "        print(\"You have failed to enter an odd number. Please try again. \")\n",
+    "        print(\"\\nYou have failed to enter an odd number. Please try again. \")\n",
     "        continue \n",
     "        \n",
     "    else:\n",
     "        break\n",
     "        \n",
-    "print(f\"The missing number will be: {start_odd}\")\n",
+    "print(f\"\\nNumber to skip is: {start_odd}]\\n\")\n",
     "\n",
     "for num in range(1, 51):\n",
     "    if num == int(start_odd):\n",
+    "        print(f\"Yikes! Skipping number: {start_odd}\")\n",
     "        continue\n",
     "    if num % 2 == 1:\n",
-    "        print(num)"
+    "        print(f\"Here is an odd number: {num}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please enter a positive integer without decimal places: 1\n",
+      "Counting to 1: 0\n",
+      "Counting to 1: 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# The input function can be used to prompt for input and use that input in your python code.\n",
+    "# Prompt the user to enter a positive number and write a loop that counts from 0 to that number. \n",
+    "while True:\n",
+    "    count_to_num = input(\"Please enter a positive integer without decimal places: \")\n",
+    "    \n",
+    "    if not int(count_to_num.isdigit()):\n",
+    "        print(\"Sorry! That was not a positive integer without decimal places. Please try again.  \")\n",
+    "        continue\n",
+    "    if int(count_to_num) < 0:\n",
+    "        print(\"Please enter a positive number. \")\n",
+    "        continue\n",
+    "    else:\n",
+    "        break\n",
+    "\n",
+    "if int(num) > 0:\n",
+    "    for i in range (0, int(count_to_num) + 1, 1):\n",
+    "        print(f\"Counting to {count_to_num}: {i}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please enter a positive integer without decimal places: -3\n",
+      "Sorry! That was not a positive integer without decimal places. Please try again.  \n",
+      "Please enter a positive integer without decimal places: 3.2\n",
+      "Sorry! That was not a positive integer without decimal places. Please try again.  \n",
+      "Please enter a positive integer without decimal places: 3.0\n",
+      "Sorry! That was not a positive integer without decimal places. Please try again.  \n",
+      "Please enter a positive integer without decimal places: 3\n",
+      "Counting to 1 from 3: 3\n",
+      "Counting to 1 from 3: 2\n",
+      "Counting to 1 from 3: 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Write a program that prompts the user for a positive integer. \n",
+    "# Next write a loop that prints out the numbers from the number the user entered down to 1.\n",
+    "while True:\n",
+    "    count_down_from_num = input(\"Please enter a positive integer without decimal places: \")\n",
+    "    \n",
+    "    if not int(count_down_from_num.isdigit()):\n",
+    "        print(\"Sorry! That was not a positive integer without decimal places. Please try again.  \")\n",
+    "        continue\n",
+    "    if int(count_to_num) < 0:\n",
+    "        print(\"Please enter a positive number. \")\n",
+    "        continue\n",
+    "    else:\n",
+    "        break\n",
+    "\n",
+    "if int(num) > 0:\n",
+    "    for i in range (int(count_down_from_num), 0, -1):\n",
+    "        print(f\"Counting to 1 from {count_down_from_num}: {i}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## FizzBuzz"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "Fizz\n",
+      "4\n",
+      "Buzz\n",
+      "Fizz\n",
+      "7\n",
+      "8\n",
+      "Fizz\n",
+      "Buzz\n",
+      "11\n",
+      "Fizz\n",
+      "13\n",
+      "14\n",
+      "FizzBuzz\n",
+      "16\n",
+      "17\n",
+      "Fizz\n",
+      "19\n",
+      "Buzz\n",
+      "Fizz\n",
+      "22\n",
+      "23\n",
+      "Fizz\n",
+      "Buzz\n",
+      "26\n",
+      "Fizz\n",
+      "28\n",
+      "29\n",
+      "FizzBuzz\n",
+      "31\n",
+      "32\n",
+      "Fizz\n",
+      "34\n",
+      "Buzz\n",
+      "Fizz\n",
+      "37\n",
+      "38\n",
+      "Fizz\n",
+      "Buzz\n",
+      "41\n",
+      "Fizz\n",
+      "43\n",
+      "44\n",
+      "FizzBuzz\n",
+      "46\n",
+      "47\n",
+      "Fizz\n",
+      "49\n",
+      "Buzz\n",
+      "Fizz\n",
+      "52\n",
+      "53\n",
+      "Fizz\n",
+      "Buzz\n",
+      "56\n",
+      "Fizz\n",
+      "58\n",
+      "59\n",
+      "FizzBuzz\n",
+      "61\n",
+      "62\n",
+      "Fizz\n",
+      "64\n",
+      "Buzz\n",
+      "Fizz\n",
+      "67\n",
+      "68\n",
+      "Fizz\n",
+      "Buzz\n",
+      "71\n",
+      "Fizz\n",
+      "73\n",
+      "74\n",
+      "FizzBuzz\n",
+      "76\n",
+      "77\n",
+      "Fizz\n",
+      "79\n",
+      "Buzz\n",
+      "Fizz\n",
+      "82\n",
+      "83\n",
+      "Fizz\n",
+      "Buzz\n",
+      "86\n",
+      "Fizz\n",
+      "88\n",
+      "89\n",
+      "FizzBuzz\n",
+      "91\n",
+      "92\n",
+      "Fizz\n",
+      "94\n",
+      "Buzz\n",
+      "Fizz\n",
+      "97\n",
+      "98\n",
+      "Fizz\n",
+      "Buzz\n"
+     ]
+    }
+   ],
+   "source": [
+    "# One of the most common interview questions for entry-level programmers is the FizzBuzz test. \n",
+    "# Developed by Imran Ghory, the test is designed to test basic looping and conditional logic skills.\n",
+    "# Write a program that prints the numbers from 1 to 100.\n",
+    "# For multiples of three print \"Fizz\" instead of the number\n",
+    "# For the multiples of five print \"Buzz\".\n",
+    "# For numbers which are multiples of both three and five print \"FizzBuzz\".\n",
+    "\n",
+    "for i in range(1, 101, 1):\n",
+    "    if i % 3 == 0 and i % 5 == 0:\n",
+    "        print(\"FizzBuzz\")\n",
+    "    elif i % 3 == 0:\n",
+    "        print(\"Fizz\")\n",
+    "    elif i % 5 == 0:\n",
+    "        print(\"Buzz\")\n",
+    "    else:\n",
+    "        print(i)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Display a table of powers."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "What number would you like to go up to? 6\n",
+      "\n",
+      "Here is your table!\n",
+      "\n",
+      "number | squared | cubed\n",
+      "------ | ------- | -----\n",
+      "1      | 1       | 1\n",
+      "2      | 4       | 8\n",
+      "3      | 9       | 27\n",
+      "4      | 16       | 64\n",
+      "5      | 25       | 125\n",
+      "6      | 36       | 216\n",
+      "Would you like to create another table? (y/n): n\n",
+      "\n",
+      "Thank you! Stay classy!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Prompt the user to enter an integer.\n",
+    "# Display a table of squares and cubes from 1 to the value entered.\n",
+    "# Ask if the user wants to continue.\n",
+    "# Assume that the user will enter valid data.\n",
+    "# Only continue if the user agrees to.\n",
+    "\n",
+    "while True:    \n",
+    "    table_target = int(input(\"What number would you like to go up to? \"))\n",
+    "    if table_target > 0:\n",
+    "        print(\"\\nHere is your table!\\n\")\n",
+    "        print(\"number | squared | cubed\")\n",
+    "        print(\"------ | ------- | -----\")\n",
+    "        number_lst = []\n",
+    "        for i in list(range(1, table_target + 1, 1)):\n",
+    "            number_lst.append(i)\n",
+    "        for n in range(0, len(number_lst), 1):\n",
+    "            print(f\"{number_lst[n]}      | {number_lst[n]**2}       | {number_lst[n]**3}\")\n",
+    "    user_continue = input(\"Would you like to create another table? (y/n): \")\n",
+    "    if user_continue == \"y\":\n",
+    "        continue\n",
+    "    if user_continue == \"n\":\n",
+    "        print(\"\\nThank you! Stay classy!\")\n",
+    "        break\n",
+    "# BONUS: INCOMPLETE\n",
+    "# Research python's format string specifiers to align the table"
    ]
   },
   {
@@ -556,6 +830,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
