completed all control_structures_exercises with bonus

--- a/control_structures_exercises.ipynb
+++ b/control_structures_exercises.ipynb
@@ -764,14 +764,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "What number would you like to go up to? 3\n",
+      "What number would you like to go up to? 5\n",
       "\n",
       "Here is your table!\n",
       "\n",
@@ -780,9 +780,11 @@
       "1      | 1       | 1\n",
       "2      | 4       | 8\n",
       "3      | 9       | 27\n",
-      "Would you like to create another table? (y/n): beans\n",
+      "4      | 16       | 64\n",
+      "5      | 25       | 125\n",
+      "Would you like to create another table? (y/n): n\n",
       "\n",
-      "I didn't understand you. Goodbye!\n"
+      "Thank you! Stay classy!\n"
      ]
     }
    ],
@@ -814,8 +816,97 @@
     "        print(\"\\nI didn't understand you. Goodbye!\")\n",
     "        break\n",
     "# Program can be improved by having the continue question prompt the user again if they do not enter exactly 'y' or 'n'\n",
-    "# BONUS: INCOMPLETE\n",
-    "# Research python's format string specifiers to align the table"
+    "# BONUS\n",
+    "# Research python's format string specifiers to align the table\n",
+    "# Solution Provided Below in following cells"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "number |  squared  | cubed\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Messing around with alignment code\n",
+    "left_aligned = 'number'\n",
+    "left_divider = \"|\"\n",
+    "center = 'squared'\n",
+    "right_divider = \"|\"\n",
+    "right_aligned = 'cubed'\n",
+    "print(f\"{left_aligned:<7}|{center:^11}|{right_aligned:>6}\")\n",
+    "# after the : < means align on the left of the area that is # width\n",
+    "# after the : ^ means align in the center of the area that is # width\n",
+    "# after the : > means align on the right of the area that is # width\n",
+    "# using format, you will need to have each of the text areas defined by a variable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "What number would you like to go up to? 6\n",
+      "\n",
+      "Here is your table!\n",
+      "\n",
+      "number | squared | cubed\n",
+      "------ | ------- | -----\n",
+      "1      | 1       | 1    \n",
+      "2      | 4       | 8    \n",
+      "3      | 9       | 27   \n",
+      "4      | 16      | 64   \n",
+      "5      | 25      | 125  \n",
+      "6      | 36      | 216  \n",
+      "\n",
+      "Would you like to create another table? (y/n): n\n",
+      "\n",
+      "Thank you! Stay classy!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# FORMATTING STRING POSITIONS\n",
+    "# Prompt the user to enter an integer.\n",
+    "# Display a table of squares and cubes from 1 to the value entered.\n",
+    "# Ask if the user wants to continue.\n",
+    "# Assume that the user will enter valid data.\n",
+    "# Only continue if the user agrees to.\n",
+    "\n",
+    "while True:    \n",
+    "    table_target = int(input(\"What number would you like to go up to? \"))\n",
+    "    if table_target > 0:\n",
+    "        print(\"\\nHere is your table!\\n\")\n",
+    "        print(\"number | squared | cubed\")\n",
+    "        print(\"------ | ------- | -----\")\n",
+    "        number_lst = []\n",
+    "        for i in list(range(1, table_target + 1, 1)):\n",
+    "            number_lst.append(i)\n",
+    "        for n in range(0, len(number_lst), 1):\n",
+    "            normal = number_lst[n]\n",
+    "            squared = number_lst[n] ** 2\n",
+    "            cubed = number_lst[n] ** 3\n",
+    "            print(f\"{normal:<7}| {squared:<8}| {cubed:<5}\")\n",
+    "    user_continue = input(\"\\nWould you like to create another table? (y/n): \")\n",
+    "    if user_continue == \"y\":\n",
+    "        continue\n",
+    "    if user_continue == \"n\":\n",
+    "        print(\"\\nThank you! Stay classy!\")\n",
+    "        break\n",
+    "    else:\n",
+    "        print(\"\\nI didn't understand you. Goodbye!\")\n",
+    "        break\n"
    ]
   },
   {
@@ -926,7 +1017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -999,7 +1090,7 @@
       "{'title': 'Night', 'author': 'Elie Wiesel', 'genre': 'Memoir'}\n",
       "{'title': 'The Candle of Vision', 'author': 'George William Russell', 'genre': 'Religion/Spirituality'}\n",
       "{'title': 'Revelations of Divine Love', 'author': 'Julian of Norwich', 'genre': 'Religion/Spirituality'}\n",
-      "{'title': 'How Not to Die', 'author': 'Michael Greger', 'genre': 'Science'}\n",
+      "{'title': 'How Not to Die', 'author': 'Michael Greger', 'genre': 'Health/Fitness'}\n",
       "{'title': 'Mad Cowboy', 'author': 'Howard Lyman', 'genre': 'Memoir'}\n",
       "\n",
       "Genres:\n",
@@ -1011,6 +1102,7 @@
       "Diary\n",
       "Drama\n",
       "Fantasy\n",
+      "Health/Fitness\n",
       "Horror\n",
       "Memoir\n",
       "Mystery\n",
@@ -1021,7 +1113,13 @@
       "Science Fiction\n",
       "Self Help\n",
       "Suspense\n",
-      "Please enter a genre: .\n"
+      "\n",
+      "Please enter a genre: self HeLP\n",
+      "Man Up\n",
+      "Getting Things Done\n",
+      "Never Split the Difference\n",
+      "The Compound Effect\n",
+      "The Road Less Traveled\n"
      ]
     }
    ],
@@ -1096,15 +1194,25 @@
     "                     {'title': 'Night', 'author': 'Elie Wiesel', 'genre': 'Memoir'},\n",
     "                     {'title': 'The Candle of Vision', 'author': 'George William Russell', 'genre': 'Religion/Spirituality'},\n",
     "                     {'title': 'Revelations of Divine Love', 'author': 'Julian of Norwich', 'genre': 'Religion/Spirituality'},\n",
-    "                     {'title': 'How Not to Die', 'author': 'Michael Greger', 'genre': 'Science'},\n",
+    "                     {'title': 'How Not to Die', 'author': 'Michael Greger', 'genre': 'Health/Fitness'},\n",
     "                     {'title': 'Mad Cowboy', 'author': 'Howard Lyman', 'genre': 'Memoir'},]\n",
     "print(\"These are some of the books I have read:\\n\")\n",
     "for book in books_i_have_read:\n",
     "    print(book)\n",
     "\n",
-    "print('\\nGenres:\\nAdventure\\nAutobiography\\nBusiness/Economics\\nCrafts/Hobbies\\nChildren\\'s\\nDiary\\nDrama\\nFantasy\\nHorror\\nMemoir\\nMystery\\nPhilosophy\\nReligion/Spirituality\\nSatire\\nScience\\nScience Fiction\\nSelf Help\\nSuspense')\n",
-    "requested_genre = input(\"Please enter a genre: \")\n",
-    "for book in books:"
+    "print('\\nGenres:\\nAdventure\\nAutobiography\\nBusiness/Economics\\nCrafts/Hobbies\\nChildren\\'s\\nDiary\\nDrama\\nFantasy\\nHealth/Fitness\\nHorror\\nMemoir\\nMystery\\nPhilosophy\\nReligion/Spirituality\\nSatire\\nScience\\nScience Fiction\\nSelf Help\\nSuspense')\n",
+    "\n",
+    "genre_list = ['adventure', 'autobiography', 'business/economics', 'crafts/hobbies', 'children\\'s', 'diary', 'drama', 'fantasy', 'health/fitness', 'horror', 'memoir', 'mystery', 'philosophy', 'religion/spirituality', 'satire', 'science', 'science fiction', 'self help', 'suspense']\n",
+    "while True:\n",
+    "    requested_genre = input(\"\\nPlease enter a genre: \")\n",
+    "    if requested_genre.lower() not in genre_list:\n",
+    "        print(\"\\nThat was not a valid genre. Please enter a valid genre: \")\n",
+    "        continue\n",
+    "    else:\n",
+    "        break\n",
+    "for book in books_i_have_read:\n",
+    "    if book['genre'].lower() == requested_genre.lower():\n",
+    "        print(book['title'])"
    ]
   },
   {
