Added additional isdigit checks for practice

--- a/control_structures_exercises.ipynb
+++ b/control_structures_exercises.ipynb
@@ -16,15 +16,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "What day of the week is it? Tuesday\n",
-      "Today is not Monday\n"
+      "What day of the week is it? mOnDaY\n",
+      "Today is Monday\n"
      ]
     }
    ],
@@ -39,15 +39,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "What day of the week is it? blursday\n",
-      "That is not a valid day of the week\n"
+      "What day of the week is it? sunday\n",
+      "Today is a weekend\n"
      ]
     }
    ],
@@ -327,34 +327,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
+   "execution_count": 49,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Give me an integer less than 1,000,000 4\n",
-      "4 x 1 = 4\n",
-      "4 x 2 = 8\n",
-      "4 x 3 = 12\n",
-      "4 x 4 = 16\n",
-      "4 x 5 = 20\n",
-      "4 x 6 = 24\n",
-      "4 x 7 = 28\n",
-      "4 x 8 = 32\n",
-      "4 x 9 = 36\n",
-      "4 x 10 = 40\n"
+      "Give me an integer: beans\n",
+      "You did not enter an integer.\n"
      ]
     }
    ],
    "source": [
     "# Write some code that prompts the user for a number, \n",
     "# then shows a multiplication table up through 10 for that number\n",
-    "user_num = input(\"Give me an integer less than 1,000,000 \")\n",
-    "for num in list(range(1,11)):\n",
-    "    product = num * int(user_num)\n",
-    "    print(str(user_num) + \" x \" + str(num) + \" = \" + str(product))"
+    "user_num = input(\"Give me an integer: \")\n",
+    "if user_num.isdigit():\n",
+    "    for num in list(range(1,11)):\n",
+    "        product = num * int(user_num)\n",
+    "        print(str(user_num) + \" x \" + str(num) + \" = \" + str(product))\n",
+    "else:\n",
+    "    print(\"You did not enter an integer.\")"
    ]
   },
   {
@@ -398,19 +394,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Please input an odd number between 1 and 50 (inclusive): 3\n",
+      "Please input an odd number between 1 and 50 (inclusive): -10\n",
       "\n",
-      "Number to skip is: 3\n",
+      "Please input a positive integer value without decimals. \n",
+      "Please input an odd number between 1 and 50 (inclusive): 3.5\n",
+      "\n",
+      "Please input a positive integer value without decimals. \n",
+      "Please input an odd number between 1 and 50 (inclusive): 59\n",
+      "\n",
+      "You have entered a number outside of the specified range. Please try again. \n",
+      "Please input an odd number between 1 and 50 (inclusive): 19\n",
+      "\n",
+      "Number to skip is: 19\n",
       "\n",
       "Here is an odd number: 1\n",
-      "Yikes! Skipping number: 3\n",
+      "Here is an odd number: 3\n",
       "Here is an odd number: 5\n",
       "Here is an odd number: 7\n",
       "Here is an odd number: 9\n",
@@ -418,7 +423,7 @@
       "Here is an odd number: 13\n",
       "Here is an odd number: 15\n",
       "Here is an odd number: 17\n",
-      "Here is an odd number: 19\n",
+      "Yikes! Skipping number: 19\n",
       "Here is an odd number: 21\n",
       "Here is an odd number: 23\n",
       "Here is an odd number: 25\n",
@@ -764,14 +769,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "What number would you like to go up to? 5\n",
+      "What number would you like to go up to? 4\n",
       "\n",
       "Here is your table!\n",
       "\n",
@@ -781,7 +786,6 @@
       "2      | 4       | 8\n",
       "3      | 9       | 27\n",
       "4      | 16       | 64\n",
-      "5      | 25       | 125\n",
       "Would you like to create another table? (y/n): n\n",
       "\n",
       "Thank you! Stay classy!\n"
@@ -850,14 +854,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "What number would you like to go up to? 6\n",
+      "What number would you like to go up to? 5\n",
+      "\n",
+      "Here is your table!\n",
+      "\n",
+      "number | squared | cubed\n",
+      "------ | ------- | -----\n",
+      "1      | 1       | 1    \n",
+      "2      | 4       | 8    \n",
+      "3      | 9       | 27   \n",
+      "4      | 16      | 64   \n",
+      "5      | 25      | 125  \n",
+      "\n",
+      "Would you like to create another table? (y/n): y\n",
+      "What number would you like to go up to? 7\n",
       "\n",
       "Here is your table!\n",
       "\n",
@@ -869,6 +886,7 @@
       "4      | 16      | 64   \n",
       "5      | 25      | 125  \n",
       "6      | 36      | 216  \n",
+      "7      | 49      | 343  \n",
       "\n",
       "Would you like to create another table? (y/n): n\n",
       "\n",
@@ -911,7 +929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -922,15 +940,17 @@
       "\n",
       "This AMAZING program will convert your numerical grades into letter grades.\n",
       "\n",
-      "Please enter a numerical grade from 0 to 100: 96.2\n",
+      "Please enter a numerical grade from 0 to 100: 23\n",
       "\n",
-      "Your letter grade is: A\n",
+      "Your letter grade is: F\n",
       "\n",
-      "Would you like to enter another grade? (y/n): y\n",
+      "Would you like to enter another grade? (y/n): -5\n",
       "\n",
-      "Please enter a numerical grade from 0 to 100: 99.5\n",
+      "I didn't understand that. Goodbye!\n",
       "\n",
-      "Your letter grade is: A+\n",
+      "Please enter a numerical grade from 0 to 100: 14\n",
+      "\n",
+      "Your letter grade is: F\n",
       "\n",
       "Would you like to enter another grade? (y/n): n\n",
       "\n",
@@ -1017,7 +1037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -1114,12 +1134,16 @@
       "Self Help\n",
       "Suspense\n",
       "\n",
-      "Please enter a genre: self HeLP\n",
-      "Man Up\n",
-      "Getting Things Done\n",
-      "Never Split the Difference\n",
-      "The Compound Effect\n",
-      "The Road Less Traveled\n"
+      "Please enter a genre: Religion/Spirituality\n",
+      "Autobiography of a Yogi\n",
+      "Siddharta\n",
+      "New Seeds of Contemplation\n",
+      "The Power of Now\n",
+      "Zen Mind: Beginner's Mind\n",
+      "Tao Te Ching\n",
+      "Black Elk Speaks\n",
+      "The Candle of Vision\n",
+      "Revelations of Divine Love\n"
      ]
     }
    ],
