refreshed output for clarity in grading

--- a/control_structures_exercises.ipynb
+++ b/control_structures_exercises.ipynb
@@ -16,15 +16,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "What day of the week is it? mOnDaY\n",
-      "Today is Monday\n"
+      "What day of the week is it? Tuesday\n",
+      "Today is not Monday\n"
      ]
     }
    ],
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 53,
    "metadata": {
     "scrolled": true
    },
@@ -336,8 +336,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Give me an integer: beans\n",
-      "You did not enter an integer.\n"
+      "Give me an integer: 11\n",
+      "11 x 1 = 11\n",
+      "11 x 2 = 22\n",
+      "11 x 3 = 33\n",
+      "11 x 4 = 44\n",
+      "11 x 5 = 55\n",
+      "11 x 6 = 66\n",
+      "11 x 7 = 77\n",
+      "11 x 8 = 88\n",
+      "11 x 9 = 99\n",
+      "11 x 10 = 110\n"
      ]
     }
    ],
@@ -547,16 +556,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Please enter a positive integer without decimal places: 1\n",
-      "Counting to 1: 0\n",
-      "Counting to 1: 1\n"
+      "Please enter a positive integer without decimal places: 8\n",
+      "Counting to 8: 0\n",
+      "Counting to 8: 1\n",
+      "Counting to 8: 2\n",
+      "Counting to 8: 3\n",
+      "Counting to 8: 4\n",
+      "Counting to 8: 5\n",
+      "Counting to 8: 6\n",
+      "Counting to 8: 7\n",
+      "Counting to 8: 8\n"
      ]
     }
    ],
@@ -929,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -940,15 +956,13 @@
       "\n",
       "This AMAZING program will convert your numerical grades into letter grades.\n",
       "\n",
-      "Please enter a numerical grade from 0 to 100: 23\n",
+      "Please enter a numerical grade from 0 to 100: 87\n",
       "\n",
-      "Your letter grade is: F\n",
+      "Your letter grade is: B+\n",
       "\n",
-      "Would you like to enter another grade? (y/n): -5\n",
+      "Would you like to enter another grade? (y/n): y\n",
       "\n",
-      "I didn't understand that. Goodbye!\n",
-      "\n",
-      "Please enter a numerical grade from 0 to 100: 14\n",
+      "Please enter a numerical grade from 0 to 100: 15\n",
       "\n",
       "Your letter grade is: F\n",
       "\n",
