Solved question 3 (regarding pets in the dataset)

--- a/python_data_structure_manipulation_exercises.ipynb
+++ b/python_data_structure_manipulation_exercises.ipynb
@@ -28,8 +28,10 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
+   "outputs": [],
    "source": [
     "students = [\n",
     "    {\n",
@@ -152,8 +154,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### How many students are there?"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -165,13 +174,19 @@
     }
    ],
    "source": [
-    "# How many students are there?\n",
     "print(f'There are {len(students)} students in the data set.')"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### How many students prefer light coffee? For each type of coffee roast?"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +200,6 @@
     }
    ],
    "source": [
-    "# How many students prefer light coffee? For each type of coffee roast? \n",
     "def coffee_pref(coffee_pref):    \n",
     "    num_coffee = 0\n",
     "    for student in students:\n",
@@ -199,6 +213,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### How many types of each pet are there?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
@@ -207,30 +228,334 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "pets\n",
-      "pets\n",
-      "pets\n",
-      "pets\n",
-      "pets\n",
-      "pets\n",
-      "pets\n",
-      "pets\n",
-      "pets\n",
-      "pets\n",
-      "pets\n",
-      "pets\n",
-      "pets\n",
-      "pets\n"
+      "<class 'list'>\n"
      ]
     }
    ],
    "source": [
-    "# How many types of each pet are there?\n",
+    "# STEP ONE: EVALUATING THE DATASET\n",
+    "\n",
+    "print(type(students))\n",
+    "\n",
+    "# Looking at the type() of the 'students' dataset, we see that this is a single \n",
+    "# object <class 'list'>\n",
+    "\n",
+    "# The problem with this list, is that we cannot access list items the way that we \n",
+    "# access values in a dictionary\n",
+    "\n",
+    "# If we were to try students['pets'], we would recieve a \n",
+    "# TypeError (list indices must be int or slices, not str)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'id': '100002', 'student': 'Thomas Bayes', 'coffee_preference': 'medium', 'course': 'data science', 'grades': [75, 73, 86, 100], 'pets': []}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# If we instead use an integer index, we can capture the information \n",
+    "# from a single element of the list\n",
+    "\n",
+    "print(students[1])\n",
+    "\n",
+    "# We see all the information surrounding a single student \n",
+    "# (id, student, coffee_preference, course, grades, pets)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'id': '100001', 'student': 'Ada Lovelace', 'coffee_preference': 'light', 'course': 'web development', 'grades': [70, 91, 82, 71], 'pets': [{'species': 'horse', 'age': 8}]}\n",
+      "{'id': '100002', 'student': 'Thomas Bayes', 'coffee_preference': 'medium', 'course': 'data science', 'grades': [75, 73, 86, 100], 'pets': []}\n",
+      "{'id': '100003', 'student': 'Marie Curie', 'coffee_preference': 'light', 'course': 'web development', 'grades': [70, 89, 69, 65], 'pets': [{'species': 'cat', 'age': 0}]}\n",
+      "{'id': '100004', 'student': 'Grace Hopper', 'coffee_preference': 'dark', 'course': 'data science', 'grades': [73, 66, 83, 92], 'pets': [{'species': 'dog', 'age': 4}, {'species': 'cat', 'age': 4}]}\n",
+      "{'id': '100005', 'student': 'Alan Turing', 'coffee_preference': 'dark', 'course': 'web development', 'grades': [78, 98, 85, 65], 'pets': [{'species': 'horse', 'age': 6}, {'species': 'horse', 'age': 7}, {'species': 'dog', 'age': 5}]}\n",
+      "{'id': '100006', 'student': 'Rosalind Franklin', 'coffee_preference': 'dark', 'course': 'data science', 'grades': [76, 70, 96, 81], 'pets': []}\n",
+      "{'id': '100007', 'student': 'Elizabeth Blackwell', 'coffee_preference': 'dark', 'course': 'web development', 'grades': [69, 94, 89, 86], 'pets': [{'species': 'cat', 'age': 10}]}\n",
+      "{'id': '100008', 'student': 'Rene Descartes', 'coffee_preference': 'medium', 'course': 'data science', 'grades': [87, 79, 90, 99], 'pets': [{'species': 'cat', 'age': 10}, {'species': 'cat', 'age': 8}]}\n",
+      "{'id': '100009', 'student': 'Ahmed Zewail', 'coffee_preference': 'medium', 'course': 'data science', 'grades': [74, 99, 93, 89], 'pets': [{'species': 'cat', 'age': 0}, {'species': 'cat', 'age': 0}]}\n",
+      "{'id': '100010', 'student': 'Chien-Shiung Wu', 'coffee_preference': 'medium', 'course': 'web development', 'grades': [82, 92, 91, 65], 'pets': [{'species': 'cat', 'age': 8}]}\n",
+      "{'id': '100011', 'student': 'William Sanford Nye', 'coffee_preference': 'dark', 'course': 'data science', 'grades': [70, 92, 65, 99], 'pets': [{'species': 'cat', 'age': 8}, {'species': 'cat', 'age': 5}]}\n",
+      "{'id': '100012', 'student': 'Carl Sagan', 'coffee_preference': 'medium', 'course': 'data science', 'grades': [100, 86, 91, 87], 'pets': [{'species': 'cat', 'age': 10}]}\n",
+      "{'id': '100013', 'student': 'Jane Goodall', 'coffee_preference': 'light', 'course': 'web development', 'grades': [80, 70, 68, 98], 'pets': [{'species': 'horse', 'age': 4}]}\n",
+      "{'id': '100014', 'student': 'Richard Feynman', 'coffee_preference': 'medium', 'course': 'web development', 'grades': [73, 99, 86, 98], 'pets': [{'species': 'dog', 'age': 6}]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Looking at a single index helps us understand what is contained in each list element\n",
+    "# But in order to obtain all of the list elements, we can use a for loop\n",
+    "\n",
     "for student in students:\n",
-    "    for element in student:\n",
-    "        if element == 'pets':\n",
-    "            print(element)\n",
-    "    \n"
+    "    print(student)\n",
+    "\n",
+    "# Now we can access each of the indices in our list and display them"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'dict'>\n",
+      "dict_keys(['id', 'student', 'coffee_preference', 'course', 'grades', 'pets'])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# If we look at the type of each list element, we can see that each element is a dictionary\n",
+    "\n",
+    "print(type(student))\n",
+    "\n",
+    "# Which keys do we have in each dictionary?\n",
+    "\n",
+    "print(students[0].keys())\n",
+    "\n",
+    "# We see from the dict_keys view object that we have:\n",
+    "# id, student, coffee_preference, course, grades, pets\n",
+    "# This analytically matches our scan of the elements earlier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'species': 'dog', 'age': 6}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Let's access the 'pets' key and see what values it contains\n",
+    "\n",
+    "pets_access = student['pets']\n",
+    "print(pets_access)\n",
+    "\n",
+    "# Notice that while it does print the value, it only prints the very last value in the list\n",
+    "# Python looks at all the info, and only returns the last matching key"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'list'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# If we look at the type for the value that we pulled, we see that it is a list\n",
+    "\n",
+    "print(type(pets_access))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'species': 'dog', 'age': 6}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Lets add another for loop to access all the information from 'pets_access'\n",
+    "\n",
+    "for pet in pets_access:\n",
+    "    print(pet)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Now that we have honed it down to the singular dictionary, lets get the species data\n",
+    "\n",
+    "species_name = pet['species']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dog\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Lets look at what is sitting in species_name now:\n",
+    "\n",
+    "print(species_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "horse\n",
+      "cat\n",
+      "dog\n",
+      "cat\n",
+      "horse\n",
+      "horse\n",
+      "dog\n",
+      "cat\n",
+      "cat\n",
+      "cat\n",
+      "cat\n",
+      "cat\n",
+      "cat\n",
+      "cat\n",
+      "cat\n",
+      "cat\n",
+      "horse\n",
+      "dog\n"
+     ]
+    }
+   ],
+   "source": [
+    "# STEP TWO: COLLECTION ALL OF THE SPECIES DATA\n",
+    "# Now that we have successfully shown the relative path that needs to be taken to\n",
+    "# access a single piece of species data, we need to develop an function that can\n",
+    "# capture all of the species data across all elements in the list\n",
+    "# This function will not be built from scratch. We will build it using the steps we \n",
+    "# have previously taken\n",
+    "def print_pet_species():\n",
+    "    for student in students: #This is going to look at all the dict type objects in the students list\n",
+    "        pets_access = student['pets'] #Within an iteration, the pets_access is going to be equal to the values in the pets key\n",
+    "        for pet in pets_access: #Then if pet happens to be a list itself, then we cycle through that list \n",
+    "            species_name = pet['species'] # And with each cycle, we capture the species name data\n",
+    "            print(species_name) # For now, we will add a print to check that it is capturing the data\n",
+    "            \n",
+    "print_pet_species() #call the function to test it\n",
+    "\n",
+    "# Now we can see that we have obtained a list of all of the pet species in all of the nested data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Now we want to create an empty list that all of this species data can go into\n",
+    "species_data = []\n",
+    "\n",
+    "# Now we can edit the previous function to append data to our empty list\n",
+    "def get_pet_species():\n",
+    "    for student in students: #This is going to look at all the dict type objects in the students list\n",
+    "        pets_access = student['pets'] #Within an iteration, the pets_access is going to be equal to the values in the pets key\n",
+    "        for pet in pets_access: #Then if pet happens to be a list itself, then we cycle through that list \n",
+    "            species_name = pet['species'] # And with each cycle, we capture the species name data\n",
+    "            species_data.append(species_name) #Instead of printing, we are going to append to the empty list\n",
+    "            \n",
+    "get_pet_species() # call the function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['horse', 'cat', 'dog', 'cat', 'horse', 'horse', 'dog', 'cat', 'cat', 'cat', 'cat', 'cat', 'cat', 'cat', 'cat', 'cat', 'horse', 'dog']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Now lets look at the data held in our list\n",
+    "\n",
+    "print(species_data)\n",
+    "\n",
+    "# We can see that it contains every species recorded in the students list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Now we want to clean up this list, so that it only shows unique names\n",
+    "# For this we can create another empty list, iterate through our species_data and \n",
+    "# only append each unique name once\n",
+    "\n",
+    "unique_species_data = []\n",
+    "for species_name in species_data:\n",
+    "    if species_name not in unique_species_data:\n",
+    "        unique_species_data.append(species_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are 3 different species in the students list.\n",
+      "Those species are:\n",
+      "horse\n",
+      "cat\n",
+      "dog\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Now lets see how many different types of species there are in the students list\n",
+    "# print(unique_species_data)\n",
+    "print(f\"There are {len(unique_species_data)} different species in the students list.\")\n",
+    "print(\"Those species are:\")\n",
+    "for unique_species_name in unique_species_data:\n",
+    "    print(unique_species_name)"
    ]
   },
   {
