Edited comments for clarity (question 3)

--- a/python_data_structure_manipulation_exercises.ipynb
+++ b/python_data_structure_manipulation_exercises.ipynb
@@ -298,7 +298,7 @@
    ],
    "source": [
     "# Looking at a single index helps us understand what is contained in each list element\n",
-    "# But in order to obtain all of the list elements, we can use a for loop\n",
+    "# In order to obtain all of the list elements, we can use a for loop\n",
     "\n",
     "for student in students:\n",
     "    print(student)\n",
@@ -331,7 +331,7 @@
     "\n",
     "# We see from the dict_keys view object that we have:\n",
     "# id, student, coffee_preference, course, grades, pets\n",
-    "# This analytically matches our scan of the elements earlier"
+    "# This computationally matches our visual scan of the elements earlier"
    ]
   },
   {
@@ -349,8 +349,13 @@
    ],
    "source": [
     "# Let's access the 'pets' key and see what values it contains\n",
+    "# A simple way to do this is to create a variable that stores the value called from \n",
+    "# the list element using its key ('pets')\n",
     "\n",
     "pets_access = student['pets']\n",
+    "\n",
+    "# Lets print what is in this variable\n",
+    "\n",
     "print(pets_access)\n",
     "\n",
     "# Notice that while it does print the value, it only prints the very last value in the list\n",
@@ -390,7 +395,10 @@
     }
    ],
    "source": [
-    "# Lets add another for loop to access all the information from 'pets_access'\n",
+    "# Lets add another for loop to access all the information from 'pets_access',\n",
+    "# This will prepare us for a future step. Visual scan of the pets keys show the values\n",
+    "# across all elements in students to be lists, some of which contain no data and some \n",
+    "# which contain multiple elements (because the student had multiple pets)\n",
     "\n",
     "for pet in pets_access:\n",
     "    print(pet)"
@@ -402,7 +410,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Now that we have honed it down to the singular dictionary, lets get the species data\n",
+    "# Now that we have honed it down to a single value, lets get the species data\n",
     "\n",
     "species_name = pet['species']"
    ]
@@ -465,10 +473,10 @@
     "# have previously taken\n",
     "def print_pet_species():\n",
     "    for student in students: #This is going to look at all the dict type objects in the students list\n",
-    "        pets_access = student['pets'] #Within an iteration, the pets_access is going to be equal to the values in the pets key\n",
-    "        for pet in pets_access: #Then if pet happens to be a list itself, then we cycle through that list \n",
+    "        pets_access = student['pets'] #Within an iteration, the pets_access variable is going to store the values for the pets key\n",
+    "        for pet in pets_access: #The value for 'pets' (stored in pets_access) is a list, so we cycle through that list \n",
     "            species_name = pet['species'] # And with each cycle, we capture the species name data\n",
-    "            print(species_name) # For now, we will add a print to check that it is capturing the data\n",
+    "            print(species_name) # For now, we will add a print to visualize the captured data\n",
     "            \n",
     "print_pet_species() #call the function to test it\n",
     "\n",
@@ -484,15 +492,15 @@
     "# Now we want to create an empty list that all of this species data can go into\n",
     "species_data = []\n",
     "\n",
-    "# Now we can edit the previous function to append data to our empty list\n",
+    "# We edit the previous function to append data to our empty list\n",
     "def get_pet_species():\n",
     "    for student in students: #This is going to look at all the dict type objects in the students list\n",
-    "        pets_access = student['pets'] #Within an iteration, the pets_access is going to be equal to the values in the pets key\n",
-    "        for pet in pets_access: #Then if pet happens to be a list itself, then we cycle through that list \n",
+    "        pets_access = student['pets'] # Within an iteration, the pets_access variable is going to store the values for the pets key\n",
+    "        for pet in pets_access: # The value for 'pets' (stored in pets_access) is a list, so we cycle through that list \n",
     "            species_name = pet['species'] # And with each cycle, we capture the species name data\n",
-    "            species_data.append(species_name) #Instead of printing, we are going to append to the empty list\n",
+    "            species_data.append(species_name) # Instead of printing, we are going to append the captured data to our empty list\n",
     "            \n",
-    "get_pet_species() # call the function"
+    "get_pet_species() # call the function to capture the data and put it in species_data"
    ]
   },
   {
@@ -509,11 +517,11 @@
     }
    ],
    "source": [
-    "# Now lets look at the data held in our list\n",
+    "# Lets look at the data held in our list\n",
     "\n",
     "print(species_data)\n",
     "\n",
-    "# We can see that it contains every species recorded in the students list"
+    "# We see that it contains every species recorded in the students list"
    ]
   },
   {
@@ -522,9 +530,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Now we want to clean up this list, so that it only shows unique names\n",
-    "# For this we can create another empty list, iterate through our species_data and \n",
-    "# only append each unique name once\n",
+    "# We want to clean up this list, so that it only shows unique names\n",
+    "# For this we can create another empty list, iterate through our species_data, and \n",
+    "# append the species to our empty list only if it hasn't already been appended\n",
     "\n",
     "unique_species_data = []\n",
     "for species_name in species_data:\n",
@@ -551,7 +559,6 @@
    ],
    "source": [
     "# Now lets see how many different types of species there are in the students list\n",
-    "# print(unique_species_data)\n",
     "print(f\"There are {len(unique_species_data)} different species in the students list.\")\n",
     "print(\"Those species are:\")\n",
     "for unique_species_name in unique_species_data:\n",
